# santiloto

./: .containerignore  .gitignore  Containerfile  compose.yml  constants.py  main.py  pyproject.toml
db_utils/: db_management.py
other_utils/: file_utils.py
other_utils/weekly/: engine.py  format.py
scripts/: run_weekly.py  test_euro_rss_playwright.py  test_primi_rss_playwright.py  update_db.py
web_utils/: get_web_loto_results.py
webapi/: app.py  schemas.py
